--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
     "expo": "~47.0.12",
+    "expo-image-picker": "~14.0.2",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
-    "expo-image-picker": "~14.0.2",
-    "@expo/vector-icons": "^13.0.0"
+    "react-native-emoji-selector": "^0.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
