--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react-native": "0.70.5",
     "react-native-emoji-selector": "^0.2.0",
     "react-native-gesture-handler": "~2.8.0",
-    "react-native-reanimated": "~2.12.0"
+    "react-native-reanimated": "~2.12.0",
+    "react-native-view-shot": "3.4.0",
+    "expo-media-library": "~15.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
